// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > renders collapsed by default 1`] = `
<DocumentFragment>
  <div
    class="_header_a8a96d"
    data-component="header"
    id="top"
  >
    <header
      aria-label="Site header"
    >
      <ul
        aria-label="Accessibility links"
        class="_a11yLinks_a8a96d"
      >
        <li>
          <a
            class="_link_f0d56e"
            href="#content-start"
          >
            Skip to content
          </a>
        </li>
        <li>
          <a
            class="_link_f0d56e"
            href="/accessibility"
          >
            Accessibility help
          </a>
        </li>
      </ul>
      <div
        class="_container_a8a96d"
      >
        <a
          aria-label="NICE: National Institute for Health and Care Excellence homepage"
          class="_home_a8a96d"
          href="/"
        >
          <img
            alt=""
            class="_icon_a8a96d"
            height="82"
            src="/assets/ukps-logo.png"
            width="750"
          />
        </a>
        <div
          class="_wrapper_a8a96d"
        >
          <button
            aria-controls="header-menu"
            aria-expanded="false"
            aria-haspopup="menu"
            aria-label="Expand site menu"
            class="_mobileMenuBtn_a8a96d"
            id="header-menu-button"
            type="button"
          >
            Menu
          </button>
        </div>
      </div>
      <div
        class="_wrapper_efef43"
        id="header-menu"
      >
        <nav
          aria-label="primary navigation"
          class="_nav_efef43"
        >
          <div
            class="_menuWrapper_efef43"
          >
            <ul
              aria-labelledby="header-menu-button"
              class="_menuList_60c4df"
            >
              <li>
                <a
                  aria-current="page"
                  class="_link_60c4df"
                  href="/"
                >
                  Home
                </a>
              </li>
            </ul>
          </div>
        </nav>
      </div>
    </header>
  </div>
</DocumentFragment>
`;

exports[`Header > renders expanded after the mobile menu button is clicked 1`] = `
<DocumentFragment>
  <div
    class="_header_a8a96d"
    data-component="header"
    id="top"
  >
    <header
      aria-label="Site header"
    >
      <ul
        aria-label="Accessibility links"
        class="_a11yLinks_a8a96d"
      >
        <li>
          <a
            class="_link_f0d56e"
            href="#content-start"
          >
            Skip to content
          </a>
        </li>
        <li>
          <a
            class="_link_f0d56e"
            href="/accessibility"
          >
            Accessibility help
          </a>
        </li>
      </ul>
      <div
        class="_container_a8a96d"
      >
        <a
          aria-label="NICE: National Institute for Health and Care Excellence homepage"
          class="_home_a8a96d"
          href="/"
        >
          <img
            alt=""
            class="_icon_a8a96d"
            height="82"
            src="/assets/ukps-logo.png"
            width="750"
          />
        </a>
        <div
          class="_wrapper_a8a96d"
        >
          <button
            aria-controls="header-menu"
            aria-expanded="true"
            aria-haspopup="menu"
            aria-label="Close site menu"
            class="_mobileMenuBtn_a8a96d"
            id="header-menu-button"
            type="button"
          >
            Close
          </button>
        </div>
      </div>
      <div
        class="_wrapper_efef43 _wrapperExpanded_efef43"
        id="header-menu"
      >
        <nav
          aria-label="primary navigation"
          class="_nav_efef43"
        >
          <div
            class="_menuWrapper_efef43"
          >
            <ul
              aria-labelledby="header-menu-button"
              class="_menuList_60c4df"
            >
              <li>
                <a
                  aria-current="page"
                  class="_link_60c4df"
                  href="/"
                >
                  Home
                </a>
              </li>
            </ul>
          </div>
        </nav>
      </div>
    </header>
  </div>
</DocumentFragment>
`;
